<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/palette_white"
    android:padding="12dp">

    <ImageView
        android:id="@+id/personDialogCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:src="@drawable/ic_clear_black_24dp"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:textColor="@color/palette_black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="Title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:padding="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.kazarovets.mediclist.addperson.view.EditTextWithTitle
                android:id="@+id/personDialogNameEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                app:etTitle="@string/add_new_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kazarovets.mediclist.addperson.view.CovidCategorySelector
                android:id="@+id/personDialogCategorySelector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/personDialogCategoryTitle"
                app:layout_constraintTop_toBottomOf="@id/personDialogNameEdit" />

            <TextView
                android:id="@+id/personDialogCategoryTitle"
                style="@style/TextSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_category"
                app:layout_constraintBottom_toBottomOf="@+id/personDialogCategorySelector"
                app:layout_constraintStart_toStartOf="@id/personDialogNameEdit"
                app:layout_constraintTop_toTopOf="@+id/personDialogCategorySelector" />


            <com.kazarovets.mediclist.addperson.view.EditTextWithTitle
                android:id="@+id/personDialogAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textMultiLine"
                app:etTitle="@string/add_new_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personDialogCategorySelector" />

            <com.kazarovets.mediclist.addperson.view.EditTextWithTitle
                android:id="@+id/personDialogPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="phone"
                app:etTitle="@string/add_new_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personDialogAddress" />


            <TextView
                android:id="@+id/personDialogSmearsTitle"
                style="@style/TextSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_smears"
                app:layout_constraintBottom_toBottomOf="@+id/personDialogSmears"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/personDialogSmears" />

            <com.kazarovets.mediclist.addperson.view.SmearsView
                android:id="@+id/personDialogSmears"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/personDialogSmearsTitle"
                app:layout_constraintTop_toBottomOf="@id/personDialogPhone" />

            <com.kazarovets.mediclist.addperson.view.EditTextWithTitle
                android:id="@+id/personDialogDisabilityCertificate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="date"
                app:etTitle="@string/add_new_disability_certificate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personDialogSmears" />

            <com.kazarovets.mediclist.addperson.view.EditTextWithTitle
                android:id="@+id/personDialogTreatment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textMultiLine"
                app:etTitle="@string/add_new_disability_treatment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personDialogDisabilityCertificate" />

            <com.kazarovets.mediclist.addperson.view.EditTextWithTitle
                android:id="@+id/personDialogAdditionalNotes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textMultiLine"
                app:etTitle="@string/add_new_additional_notes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personDialogTreatment" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/personDialogIsClosedCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layoutDirection="rtl"
                android:text="@string/add_new_is_closed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personDialogAdditionalNotes" />

            <View
                android:id="@+id/spaceBelowButton"
                android:layout_width="0dp"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personDialogIsClosedCheckbox" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/personDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="30dp"
        android:textAllCaps="true" />

</FrameLayout>